feat: Add icons and update README and SETUP documentation for Lovable.dev Assistant Chrome Extension

--- a/manifest.json
+++ b/manifest.json
@@ -25,9 +25,19 @@
       "run_at": "document_end"
     }
   ],
+  "icons": {
+    "16": "assets/icons/icon16.png",
+    "48": "assets/icons/icon48.png",
+    "128": "assets/icons/icon128.png"
+  },
   "action": {
     "default_popup": "popup/popup.html",
-    "default_title": "Lovable.dev Assistant"
+    "default_title": "Lovable.dev Assistant",
+    "default_icon": {
+      "16": "assets/icons/icon16.png",
+      "48": "assets/icons/icon48.png",
+      "128": "assets/icons/icon128.png"
+    }
   },
   "web_accessible_resources": [
     {
