feat: Enhance Lovable Detector and UI with conversation capture and improved message handling
- Updated `loadHistoryMessages` to include detected messages from conversation capture.
- Added sorting of messages by timestamp for better UX.
- Introduced `addDetectedMessage` method to handle incoming messages dynamically.
- Enhanced sample messages with new structure and indicators for real vs sample messages.
- Implemented keyboard shortcuts for improved user interaction in `ui-injector.js`.
- Added drag and resize functionality for the UI dialog.
- Expanded settings view with API configuration and preferences.
- Improved message sending and enhancing features with error handling.
- Updated manifest to include new scripts and styles.
- Fixed JavaScript errors and adjusted scan frequency for conversation capture.

--- a/manifest.json
+++ b/manifest.json
@@ -20,8 +20,11 @@
     {
       "matches": ["https://lovable.dev/projects/*"],
       "js": [
-        "content_scripts/lovable-detector.js"
+        "content_scripts/lovable-detector.js",
+        "content_scripts/conversation-capture.js",
+        "content_scripts/ui-injector.js"
       ],
+      "css": ["assets/styles/content.css"],
       "run_at": "document_end"
     }
   ],
@@ -41,7 +44,10 @@
   },
   "web_accessible_resources": [
     {
-      "resources": ["assets/styles/*.css"],
+      "resources": [
+        "assets/styles/*.css",
+        "content_scripts/*.js"
+      ],
       "matches": ["https://lovable.dev/*"]
     }
   ]
