feat: Enhance conversation saving functionality and optimize scraping process

--- a/manifest.json
+++ b/manifest.json
@@ -14,7 +14,8 @@
     "https://*.supabase.co/*"
   ],
   "background": {
-    "service_worker": "background/service-worker.js"
+    "service_worker": "background/service-worker.js",
+    "type": "module"
   },
   "content_scripts": [
     {
