feat: Remove obsolete files and enhance markdown formatting integration
- Deleted outdated documentation files: CONTEXT_TIMELINE_FIXES.md, ERROR_FIXES.md, HISTORY.md, PARSING_COMPLETENESS_FIXES.md, REFACTORING_COMPLETED.md, REFACTORING_PLAN.md, TIMELINE_CAPTURE_FIXES.md.
- Integrated advanced markdown formatting using MarkdownFormatter in lovable-detector.js and ui-injector.js for consistent message display.
- Updated manifest.json to include markdown-formatter.js for proper functionality.
- Enhanced duplicate checking logic in database-sync.js to prevent duplicate entries based on lovable_message_id.
- Created database-cleanup-duplicates.sql for utility in removing existing duplicates from the database.
- Improved logging and error handling for duplicate detection processes.

--- a/manifest.json
+++ b/manifest.json
@@ -21,6 +21,7 @@
     {
       "matches": ["https://lovable.dev/projects/*"],
       "js": [
+        "markdown-formatter.js",
         "content_scripts/lovable-detector.js",
         "content_scripts/conversation-capture-simple.js",
         "content_scripts/ui-injector.js"
@@ -47,7 +48,8 @@
     {
       "resources": [
         "assets/styles/*.css",
-        "content_scripts/*.js"
+        "content_scripts/*.js",
+        "markdown-formatter.js"
       ],
       "matches": ["https://lovable.dev/*"]
     }
