feat: Implement UI Dialog Manager for assistant interactions
- Created UIDialogManager class to handle dialog creation, styling, and user interactions.
- Added methods for toggling the assistant, closing the dialog, and showing notifications.
- Implemented drag functionality for the dialog window.
- Developed a welcome page with feature cards for project management, chat, history, utilities, and settings.
- Enhanced message handling with support for HTML content and markdown formatting.
- Included typing indicators and error handling for chat messages.
- Established event listeners for feature selection and dialog interactions.

--- a/manifest.json
+++ b/manifest.json
@@ -25,6 +25,8 @@
       "matches": ["https://lovable.dev/projects/*"],
       "js": [
         "markdown-formatter.js",
+        "content_scripts/ui-dialog-manager.js",
+        "content_scripts/project-manager.js",
         "content_scripts/lovable-detector.js",
         "content_scripts/conversation-capture-simple.js",
         "content_scripts/ui-injector.js"
