--- a/manifest.json
+++ b/manifest.json
@@ -27,6 +27,7 @@
         "markdown-formatter.js",
         "content_scripts/ui-dialog-manager.js",
         "content_scripts/project-manager.js",
+        "content_scripts/chat-interface.js",
         "content_scripts/lovable-detector.js",
         "content_scripts/conversation-capture-simple.js",
         "content_scripts/ui-injector.js"
