--- a/manifest.json
+++ b/manifest.json
@@ -28,6 +28,7 @@
         "content_scripts/ui-dialog-manager.js",
         "content_scripts/project-manager.js",
         "content_scripts/chat-interface.js",
+        "content_scripts/conversation-history.js",
         "content_scripts/lovable-detector.js",
         "content_scripts/conversation-capture-simple.js",
         "content_scripts/ui-injector.js"
