Refactor code structure for improved readability and maintainability

--- a/manifest.json
+++ b/manifest.json
@@ -29,6 +29,8 @@
         "content_scripts/project-manager.js",
         "content_scripts/chat-interface.js",
         "content_scripts/conversation-history.js",
+        "content_scripts/utilities-manager.js",
+        "content_scripts/status-monitor.js",
         "content_scripts/lovable-detector.js",
         "content_scripts/conversation-capture-simple.js",
         "content_scripts/ui-injector.js"
