Add Comprehensive Message Scraper for enhanced message extraction and processing
- Introduced a new content script `message-scraper.js` to handle comprehensive message scraping functionality.
- Implemented intelligent scrolling, batch processing, and advanced scraping features with progress tracking.
- Added chat container detection and comprehensive message extraction with deduplication.
- Integrated state management and cleanup for scraping sessions, ensuring efficient data handling.
- Enhanced database saving with concurrent request management and cancellation capabilities.
- Updated `manifest.json` to include the new message scraper script.

--- a/manifest.json
+++ b/manifest.json
@@ -31,6 +31,7 @@
         "content_scripts/conversation-history.js",
         "content_scripts/utilities-manager.js",
         "content_scripts/status-monitor.js",
+        "content_scripts/message-scraper.js",
         "content_scripts/lovable-detector.js",
         "content_scripts/conversation-capture-simple.js",
         "content_scripts/ui-injector.js"
